fix: preview misalignment in merge and apply modal

--- a/src/assetbundles/src/css/Translations.css
+++ b/src/assetbundles/src/css/Translations.css
@@ -551,6 +551,7 @@ body.ltr .widget[data-type="acclaro\\translations\\widgets\\NewAndModifiedEntrie
 .visual iframe {
     width: calc(50% - 2px);
     min-height: 1000px;
+    display: inline-block !important;
 }
 
 @media only screen and (max-width: 720px) {
